fix: logger + territory building events creation
